# depth-map-fusion-utils

./: '  .gitignore  CMakeLists.txt  README.md  compile_commands.json
data/: Heli_Blade_3.ply  simple jassm.ply
data/cube/: cameras.tmp
data/icososphere/: cameras.tmp
data/large_sphere/: cameras.tmp
data/small_sphere/: cameras.tmp
include/: Algorithms.hpp  Camera.hpp  CommonUtilities.hpp  DebuggingUtilities.hpp  FileRoutines.hpp  OccupancyGrid.hpp  PointCloudProcessing.hpp  RayTracingEngine.hpp  TSPSolver.hpp  TransformationUtilities.hpp  VisualizationUtilities.hpp  Volume.hpp
src/: '  CameraMotionPlanner.cpp  CameraMotionPlannerSingleCameraDebugging.cpp  CameraMotionPlanner_v2.cpp  CameraMotionPlanning.cpp  FilterNormals.cpp  IdentifySweetSpot.cpp  MergeClouds.cpp  NewRaytracingTest.cpp  NewSetCoverFinder.cpp  PointCloudFilter.cpp  PointCloudMetricConverter.cpp  PositionCamerasDebugging.cpp  RaytracingTest.cpp  SceneVolume.cpp  SetCoverDebugging.cpp  SetCoverFinder.cpp  SetCoverOptimization.cpp  SetCoverViz.cpp  SetCoverVizSingleCamera.cpp  SetCoverVizSingleCameraClassified.cpp  StlToPcl.cpp  UnderstandTransformations.cpp  VisualizationDebugging.cpp  VisualizePointCloud.cpp
src/reference/: backgroundSubtraction.cpp  convex_hull.cpp  pcl_fast_transformation.cpp  pcl_fusion_imaging.cpp  pcl_fusion_pointclouds.cpp  pcl_normal_estimation.cpp  pcl_parallel_applytransformation.cpp  pcl_remove_outliers.cpp
src/test/: PlaneFitting.cpp  UnderstandTransformations.cpp
tests/: ArtificialLocations.cpp  CalibrationPathGen.cpp  CameraMotionPlanner.cpp  CameraMotionTSP.cpp  CameraPathGen.cpp  CameraPlacement.cpp  ErrorCalc.cpp  FilteringError.cpp  GPUNormalEstimation.cpp  MMToM.cpp  MemoryMapping.cpp  MemoryMappingReader.cpp  MergeClouds.cpp  NormalEstimation.cpp  OccupancyGridTest.cpp  OctoMap.cpp  PCLGpu.cpp  PointCloudError.cpp  PointCloudFilter.cpp  PointCloudFilterDebugging.cpp  Raytracing.cpp  RaytracingTest.cpp  SceneVolume.cpp  SetCover.cpp  SetCoverOptimization.cpp  SetCoverVizSingleCamera.cpp  SetCoverVizSingleCameraClassified.cpp  SharedPtr.cpp  TSP.cpp  TSPSolver.cpp  XyzToPcd.cpp
tests/temp/: FilterNormals.cpp  NewRaytracingTest.cpp  PointCloudFilter.cpp  SetCoverFinder.cpp
