project(CameraMotionPlanning)
cmake_minimum_required(VERSION 2.6.2)
find_package (Eigen3 3.3 REQUIRED NO_MODULE)
# cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
add_compile_options(-std=c++1z -O3 -fopenmp)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})

FIND_PACKAGE( OpenMP)
if(OPENMP_FOUND)
    message("OPENMP FOUND")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
include_directories(SYSTEM ${OpenMP_INCLUDE_PATH})


function(create_exe firstfile )
    add_executable(${firstfile} src/${firstfile}.cpp)
    target_include_directories(${firstfile} PRIVATE include)
    target_link_libraries(${firstfile} Eigen3::Eigen)
    target_link_libraries(${firstfile} ${PCL_LIBRARIES} ${OpenCV_LIBS})
endfunction()

# create_exe(IdentifySweetSpot)
# create_exe(SceneVolume)
# create_exe(MergeClouds)
# create_exe(UnderstandTransformations)
create_exe(RaytracingTest)
create_exe(CameraMotionPlanning)
# create_exe(PlaneFitting)
