project(CameraMotionPlanning)
cmake_minimum_required(VERSION 2.6.2)
find_package (Eigen3 3.3 REQUIRED NO_MODULE)
# cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
add_compile_options(-std=c++1z -O3 -fopenmp)
# add_compile_options(-std=c++1z -fopenmp)
find_package(PCL 1.10.1.99)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})

find_package(Boost REQUIRED)
find_package(libnabo REQUIRED)

FIND_PACKAGE( OpenMP)
if(OPENMP_FOUND)
    message("OPENMP FOUND")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
include_directories(SYSTEM ${OpenMP_INCLUDE_PATH})

find_package(octomap REQUIRED)
include_directories(${OCTOMAP_INCLUDE_DIRS})
link_libraries(${OCTOMAP_LIBRARIES})


function(create_exe firstfile )
    add_executable(${firstfile} tests/${firstfile}.cpp)
    target_include_directories(${firstfile} PRIVATE include)
    target_link_libraries(${firstfile} Eigen3::Eigen)
    target_link_libraries(${firstfile} ${PCL_LIBRARIES} ${OpenCV_LIBS})
    target_link_libraries(${firstfile} -lnlopt -lm -lrt -lncurses libnabo::nabo)
endfunction()

function(create_test_exe firstfile )
    add_executable(${firstfile} tests/${firstfile}.cpp)
    target_include_directories(${firstfile} PRIVATE include)
    target_link_libraries(${firstfile} Eigen3::Eigen)
    target_link_libraries(${firstfile} -lnlopt -lm)
endfunction()


# create_exe(CameraPlacement)
# create_exe(SetCover)
# create_exe(FilteringError)

create_exe(OccupancyGridTest)
create_exe(PCLGpu)
create_exe(GPUNormalEstimation)

create_test_exe(SharedPtr)

# create_exe(Raytracing)
# create_exe(XyzToPcd)
# create_exe(CameraMotionTSP)
# create_test_exe(TSPSolver)
# create_exe(PointCloudFilter)
# create_exe(OctoMap)
# create_exe(PointCloudError)
# create_exe(PointCloudFilterDebugging)
# create_exe(NormalEstimation)
# create_exe(MemoryMapping)
# create_exe(MemoryMappingReader)
# create_exe(SetCoverVizSingleCameraClassified)
# create_exe(StlToPcl)
